--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Will <will@kentik.com>"]
 edition = "2018"
 
 [dependencies]
+backoff           = "0.1.3"
 log               = "0.4.6"
 crossbeam-channel = "0.3.8"
 serde             = "1.0.89"
