--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,13 @@ features = ["rustls-tls"]
 default-features = false
 
 [dev-dependencies]
+criterion  = "0.2.10"
 env_logger = "0.6.1"
 serde_json = "1.0.39"
+
+[[bench]]
+name    = "benches"
+harness = false
 
 [profile.release]
 lto   = true
