--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name    = "rkapi"
+name    = "kentik-api"
 version = "0.0.1"
 authors = ["Will <will@kentik.com>"]
 edition = "2018"
@@ -17,9 +17,16 @@ features = ["rustls-tls"]
 default-features = false
 
 [dev-dependencies]
-criterion  = "0.2.10"
-env_logger = "0.6.1"
-serde_json = "1.0.39"
+actix-rt      = "0.2.2"
+actix-service = "0.3.5"
+actix-web     = "1.0.0-alpha.2"
+bytes         = "0.4.12"
+base64        = "0.10.1"
+criterion     = "0.2.10"
+env_logger    = "0.6.1"
+futures       = "0.1"
+rand          = "0.6.5"
+serde_json    = "1.0.39"
 
 [[bench]]
 name    = "benches"
