--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2018"
 backoff           = "0.1.3"
 log               = "0.4.6"
 crossbeam-channel = "0.3.8"
+rmp-serde         = "0.13.7"
 serde             = "1.0.89"
 serde_derive      = "1.0.89"
+serde_bytes       = "0.10.5"
 
 [dependencies.reqwest]
-version  = "0.9.11"
+version  = "0.9.13"
 features = ["rustls-tls"]
 default-features = false
 
