--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,14 +23,24 @@ features = ["rustls-tls"]
 default-features = false
 
 [dev-dependencies]
-actix-rt      = "0.2.2"
-actix-service = "0.3.5"
-actix-web     = "1.0.0-alpha.2"
+actix-rt      = "=0.2.2"
+actix-service = "=0.3.4"
 base64        = "0.10.1"
 criterion     = "0.2.10"
 env_logger    = "0.6.1"
 rand          = "0.6.5"
 serde_json    = "1.0.39"
+
+[dev-dependencies.actix-http]
+version  = "=0.1.0-alpha.2"
+
+[dev-dependencies.actix-web]
+version  = "=1.0.0-alpha.2"
+features = []
+default-features = false
+
+[dev-dependencies.actix-web-codegen]
+version  = "=0.1.0-alpha.1"
 
 [[bench]]
 name    = "benches"
