--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,17 @@ edition = "2018"
 
 [dependencies]
 backoff           = "0.1.3"
-bytes             = "0.4.12"
+bytes             = "1.1.0"
 crossbeam-channel = "0.3.8"
-futures           = "0.1.26"
-futures-retry     = "0.3.0"
+futures           = "0.3.21"
+futures-retry     = "0.6.0"
 log               = "0.4.6"
 rmp-serde         = "0.13.7"
 serde_bytes       = "0.11.1"
 
 [dependencies.reqwest]
-version  = "0.9.15"
-features = ["rustls-tls"]
+version  = "0.11.10"
+features = ["blocking", "json", "rustls-tls"]
 default-features = false
 
 [dependencies.serde]
@@ -24,8 +24,8 @@ version  = "1.0.90"
 features = ["derive"]
 
 [dependencies.tokio]
-version  = "0.1.18"
-features = ["rt-full", "tcp"]
+version  = "1.17.0"
+features = ["rt-multi-thread"]
 default-features = false
 
 [dev-dependencies]
@@ -34,6 +34,7 @@ actix-service = "=0.3.4"
 base64        = "0.10.1"
 criterion     = "0.2.10"
 env_logger    = "0.6.1"
+http          = "0.2.6"
 rand          = "0.6.5"
 serde_json    = "1.0.39"
 
@@ -47,6 +48,14 @@ default-features = false
 
 [dev-dependencies.actix-web-codegen]
 version  = "=0.1.0-alpha.1"
+
+[dev-dependencies.bytes_old]
+package  = "bytes"
+version  = "0.4.12"
+
+[dev-dependencies.futures_old]
+package  = "futures"
+version  = "0.1.26"
 
 [[bench]]
 name    = "benches"
